Preserve last passing candidate for org.codehaus.plexus:plexus-classworlds:2.0.0